--- a/resources/04_layout/solution/multi-row-with-navs.html
+++ b/resources/04_layout/solution/multi-row-with-navs.html
@@ -10,10 +10,10 @@
     <header>
 
       <img src="" alt="">
-      <nav></nav>
-      <nav></nav>
-      <nav></nav>
-      <nav></nav>
+      <nav>Nav</nav>
+      <nav>Nav</nav>
+      <nav>Nav</nav>
+      <nav>Nav</nav>
 
     </header>
 
