adds lesson links and more material

--- a/resources/09_vars_conditionals_types/starter_code/blackout/index.html
+++ b/resources/09_vars_conditionals_types/starter_code/blackout/index.html
@@ -15,7 +15,7 @@
 
   <button id="light_switch">Light Switch</button>
 
-  <script src='http://code.jquery.com/jquery-latest.min.js'></script>
+  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 
   <script src="js/index.js"></script>
 
