--- a/resources/09_vars_conditionals_types/starter_code/age_verification/index.html
+++ b/resources/09_vars_conditionals_types/starter_code/age_verification/index.html
@@ -8,7 +8,7 @@
   <body>
     <form class="">
       <label for="age-question">How old are you?</label><br>
-      <input type="text" name="age-question" value=""><br>
+      <input id="age" type="text" name="age-question" value=""><br>
       <input id="submit-button" type="submit" value="Submit">
     </form>
 
