--- a/resources/10_functions/cash_register/index.html
+++ b/resources/10_functions/cash_register/index.html
@@ -32,7 +32,10 @@
   </form>
 </div>
 
-  <script src='http://codepen.io/assets/libs/fullpage/jquery.js'></script>
+  <script
+src="https://code.jquery.com/jquery-3.2.1.min.js"
+integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+crossorigin="anonymous"></script>
 
   <script src="js/index.js"></script>
 
